--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #606C38;
-  color: #FEFAE0;
+  background-color: #B8CCCB;
+  
+  color: #3A4955;
 }
 
 code {
