--- a/src/register/register.css
+++ b/src/register/register.css
@@ -1,11 +1,11 @@
 h2 {
     text-align: center;
-    background: #DDA15E;
+    background: #75A5BD;
     margin-top: 0;
 }
 
 .register {
     max-width: 85%;
-    border: 2px solid wheat;
     margin: 15px auto;
+    background-color: #F1F6F8;
 }
