--- a/src/thumbnail/thumbnail.css
+++ b/src/thumbnail/thumbnail.css
@@ -1,12 +1,16 @@
 .thumbnail {
     border: 1px solid #283618;
     width: 150px;
-    background:#FEFAE0;
-    color: #606C38;
+    background: white;
+    color: #232C33;
     margin: 5px auto;
     text-align: center;
 }
 
 p {
     margin: 5px;
+}
+
+a h2 {
+    color: white;
 }
