--- a/src/peak/peak.css
+++ b/src/peak/peak.css
@@ -2,3 +2,11 @@
     text-align: center;
     color: white;
 }
+
+img {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+
+}
