--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -4,11 +4,6 @@ h1 {
     font-size: 50px;
 }
 
-img {
-    max-width: 100%;
-    position: relative;
-}
-
 p {
     margin: 25px;
     text-align: center;
@@ -22,7 +17,7 @@ button {
     font-size: 18px;
     padding:0.45em 1.2em;
     border: 2px solid #FEFAE0;
-    margin: auto;
+    margin: 20px auto;
     border-radius:0.12em;
     box-sizing: border-box;
     text-decoration:none;
@@ -47,15 +42,29 @@ button:hover {
 
 .homepageText {
     position: absolute;
-    top: 6%;
+    top: 15%;
     bottom: 50%;
-    color: white;
-
-
+    color: #fff;
+    font-size: 18px;
+    text-shadow: 3px 2px 5px #000;
 }
-
-
 
 #homeImg {
-    width: 100%;
+    height: 650px;
+    width: auto;
 }
+
+/* Responsive styles for desktop */
+
+@media all and (min-width: 600px) {
+
+    #homeImg {
+        width: 100%;
+        height: auto;
+        position: relative;
+
+    }
+
+}
+
+
