creating responsive text on homepage

--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -56,13 +56,19 @@ button:hover {
 
 /* Responsive styles for desktop */
 
-@media all and (min-width: 600px) {
+@media all and (min-width: 800px) {
 
     #homeImg {
         width: 100%;
         height: auto;
         position: relative;
 
+    }
+
+    .homepageText {
+        max-width: 800px;
+        left: 20%;
+        right: 20%
     }
 
 }
