--- a/src/thumbnail/thumbnail.css
+++ b/src/thumbnail/thumbnail.css
@@ -1,13 +1,13 @@
 h3 {
     margin: 5px 8px;
+    font-size: 26px;
 }
 
 .thumbnail {
-    /* border: 1px solid #283618; */
     box-shadow: 0 4px 8px 0 #000;
     transition: 0.3s;
-    /* width: 250px; */
-    max-width: 50%;
+    max-width: 80%;
+    min-height: 150px;
     background: white;
     color: #232C33;
     margin: 15px auto;
@@ -19,16 +19,26 @@ h3 {
     box-shadow: 0 8px 8px 0 #000;
 }
 
+.thumbnail-inner {
+    padding: 15px;
+}
+
 .thumbTitle {
    color: black;
    font-size: 22px;
-   text-shadow: 2px 2px 4px lavender;
+   text-shadow: 2px 2px 4px #75A5BD;
    text-transform: uppercase;
    /* text-decoration: underline; */
 }
 
 p {
     margin: 5px;
+    font-size: 17px;
 }
 
+@media all and (min-width: 800px) {
+    .thumbnail {
+        max-width: 350px;
+    }
+}
 
