--- a/src/viewPeaks/viewPeaks.css
+++ b/src/viewPeaks/viewPeaks.css
@@ -4,8 +4,6 @@
 
 .viewPeaks {
     background-color: #d4dae0;
-    /* border: 1px solid purple; */
-    /* border-radius: 20px; */
     max-width: 85%;
     margin: auto;
     margin-top: 30px;
@@ -28,9 +26,8 @@
     text-align:center;
     transition: all 0.2s;
     background-color: #2d7497;
-    ;
+    
 }
-
 
 .viewAll:hover {
     background-color: #75A5BD;
@@ -56,12 +53,21 @@
     background-color: #fff;
 }
 .filterInputs {
-    margin: 5px;
+    margin: 5px auto;
+    display: block;
+    text-align-last: center;
+    color: black;
 }
 
 #filterBox {
     color: #fff;
     text-shadow: 2px 2px 2px black;
     text-transform: uppercase;
+}
+
+@media all and (min-width: 800px) {
+    #filters {
+        max-width: 500px;
+    }
 }
 
