--- a/src/homepage/homepage.css
+++ b/src/homepage/homepage.css
@@ -1,13 +1,15 @@
+html {
+    min-height: 100%;
+    background-image: url('../images/mountains.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+
 h1 {
     text-align: center;
     text-transform: uppercase;
     font-size: 50px;
-}
-
-p {
-    margin: 25px;
-    text-align: center;
-    /* text-transform: uppercase; */
 }
 
 button {
@@ -41,12 +43,21 @@ button:hover {
 }
 
 .homepageText {
-    position: absolute;
-    top: 15%;
-    bottom: 50%;
-    color: #fff;
-    font-size: 18px;
-    text-shadow: 3px 2px 5px #000;
+    margin-top: 20%;
+    padding: 25px;
+    background-color: rgba(255, 255, 255, 0.6);
+    border-radius: 25px;
+    margin-left: 10%;
+    margin-right: 10%;
+    font-weight: 500;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    font-size: 20px;
+    color: #000;
+    /* text-shadow: 2px 2px 3px #FFF; */
 }
 
 #homeImg {
@@ -58,6 +69,7 @@ button:hover {
 
 @media all and (min-width: 800px) {
 
+
     #homeImg {
         width: 100%;
         height: auto;
@@ -66,9 +78,10 @@ button:hover {
     }
 
     .homepageText {
-        max-width: 800px;
-        left: 20%;
-        right: 20%
+        max-width: 600px;
+        margin: auto;
+        font-size: 22px;
+        margin-top: 5%
     }
 
 }
