--- a/src/register/register.css
+++ b/src/register/register.css
@@ -2,6 +2,8 @@ h2 {
     text-align: center;
     background: #75A5BD;
     margin-top: 0;
+    color: #fff;
+    text-shadow: 2px 2px 2px black;
 }
 
 .summitreg {
@@ -9,12 +11,21 @@ h2 {
     text-align: center;
 }
 
-.register {
-    max-width: 85%;
-    margin: 15px auto;
-    background-color: #F1F6F8;
+.signBtn {
+    height: 40px;
+    border-bottom: 2px solid #75A5BD;
 }
 
-#peakinks {
-    color: purple;
+.register {
+    max-width: 85%;
+    min-height: 90px;
+    margin: auto;
+    background-color: rgba(255, 255, 255, 0.9);
 }
+
+.registerContent {
+    background-color: white;
+    margin: auto;
+    margin-top: 30px;
+}
+
