--- a/src/viewPeaks/viewPeaks.css
+++ b/src/viewPeaks/viewPeaks.css
@@ -22,7 +22,6 @@ body .viewPeaksOuter {
 .viewAll {
     font-size: 15px;
     padding:0.45em 1.2em;
-    
     border: none;
     margin: 20px auto;
     border-radius: 20px;
@@ -61,20 +60,24 @@ body .viewPeaksOuter {
     max-width: 80px;
     margin: auto;
     margin-top: 5px;
-    background-color: #2d7497;
-    color: white;
+    background-color: #f1f1f1;
+    color: black;
     text-transform: uppercase;
     border-radius: 8px;
     border: none;
     padding: 5px 10px;
 }
 
+.thumbnailContainer {
+    padding-bottom: 20px;
+}
+
 .submit:hover {
-    box-shadow: 0 2px 6px 0 #000;
+    box-shadow: 0 2px 5px 0 #000;
 
 }
 
-#viewPeaksHeader {
+.peaksHeader {
     margin-top: 10px;
     margin-bottom: 5px;
     color: black;
