--- a/src/addComment/addComment.css
+++ b/src/addComment/addComment.css
@@ -5,6 +5,13 @@
 
 .addComment {
     text-align: center;
+    background-color: rgba(255, 255, 255, 0.6);
+    max-width: 85%;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 25px;
+    opacity: 0.9;
 }
 
 body .addCommentContainer {
