--- a/src/peak/peak.css
+++ b/src/peak/peak.css
@@ -9,6 +9,12 @@ body .peakDetails {
 .info {
   margin-top: 20px;
 }
+
+.pp {
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
 .peakLinks {
   font-size: 15px;
   padding: 9px;
@@ -25,15 +31,20 @@ body .peakDetails {
   transition: all 0.2s;
   background-color: #2d7497;
   text-transform: uppercase;
+  box-shadow: 0 2px 6px 0 #000;
 }
 
-/* .peakLinks:hover {
-  box-shadow: 0 2px 6px 0 #000;
-  width: 100px;
-} */
+.peakLinks:hover {
+  box-shadow: 0 2px 8px 0 #000;
+}
+
+.back {
+  color: white;
+  text-decoration: none;
+}
 
 .peakDetailsContainer {
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: rgba(255, 255, 255, 0.6);
   max-width: 85%;
   margin: auto;
   margin-top: 30px;
